--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -44,7 +44,8 @@ jobs:
       with:
         name: flightplanfiller
         path: flightplanfiller
-
+    - name: Add in the resource files
+      run: cp openscope-airlines.json   
     - name: Upload release (maybe)
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
