--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -33,17 +33,25 @@ jobs:
 
     - name: Build
       run: |
-        go build -o ./flightplanfiller.exe .
+        go build -o ./airplanefetcher.exe .
         ls
+    - name: File stuff 
+      run: |
+        mkdir -p AirplaneFetcher/resources
+        cp resources/openscope-airlines.json AirplaneFetcher/resources
+        cp airplanefetcher.exe AirplaneFetcher
+    
+    - name: ZIP it all
+      run: zip -rv AirplaneFetcher.zip AirplaneFetcher
 
     - name: Save executable
       uses: actions/upload-artifact@v3
       with:
-        name: flightplanfiller.exe
-        path: flightplanfiller.exe
+        name: AirplaneFetcher.zip
+        path: AirplaneFetcher.zip
 
     - name: Upload release (maybe)
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        files: 'flightplanfiller.exe'
+        files: 'airplanefetcher.exe'
