fixed double osx

--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -63,4 +63,4 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        files: 'AirplaneFetcher(osx)(osx).zip'
+        files: 'AirplaneFetcher(osx).zip'
