--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -51,13 +51,13 @@ jobs:
         cp fplans AirplaneFetcher 
     - name: Create a ZIP
       run: 
-        zip -rv AirplaneFetcher(osx).zip AirplaneFetcher
+        zip -rv 'AirplaneFetcher(osx).zip' AirplaneFetcher
 
     - name: Save zip file as build artifact
       uses: actions/upload-artifact@v3
       with:
-        name: AirplaneFetcher(osx).zip
-        path: AirplaneFetcher(osx).zip
+        name: 'AirplaneFetcher(osx).zip'
+        path: 'AirplaneFetcher(osx).zip'
 
     - name: Upload release (maybe)
       if: startsWith(github.ref, 'refs/tags/')
